# GTestTemplate

./: .gitmodules  CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  TrailTest.cpp
src/: CMakeLists.txt  Example.cpp  Example.h
